# zazaki_git

./: CMakeLists.txt  GOAL_STATE.json  README.md
config/: default.toml
docs/superpowers/specs/: 2026-07-07-zazaki-git-design.md
outputs/runtime/: notif-loaded.txt  plugin-loaded-receipt.json
src/: CMakeLists.txt  main.cpp
src/app/: app.h
src/git/: branch.h  diff.h  log.h  remote.h  repo.cpp  repo.h  stash.h
src/ui/: colors.h  diff_panel.h  help_panel.h  main_panel.h  sidebar.h
src/ui/components/: input.h  list.h
src/ui/panels/: branch_panel.h  commit_panel.h  log_panel.h  remote_panel.h  staging_panel.h  stash_panel.h  status_panel.h
src/util/: config.h  logger.h
tests/: CMakeLists.txt  test_git_core.cpp  test_git_extensions.cpp
